# tabpfn_estimation

./: .gitignore  eda.ipynb  experiments_optuna.ipynb  model.py  pyproject.toml  requirements.txt  train.py
dataset/: pc.data.39.TruckTransportation.csv  predicted.csv
